<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                app:title="@string/request"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/blue_black_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_choose_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp"
                    app:hintText="@string/choose_device">

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_100ssp"
                    android:text="@string/txt_device" />

                <TextView
                    android:id="@+id/txt_client_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20ssp">

                </TextView>

                <TextView
                    android:id="@+id/txt_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/client_name"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_device_name"
                    android:layout_width="@dimen/_330sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />

                <TextView
                    android:id="@+id/txt_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/device_name"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_choose_problem_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_80sdp"
                    app:hintText="@string/choose_problem">

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:id="@+id/txt_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/problem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/comments"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/txt_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/comment" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <EditText
                    android:id="@+id/et_first_time"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/first_time" />

                <EditText
                    android:id="@+id/et_request_time"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/request_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <EditText
                    android:id="@+id/et_third_time"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_26sdp"
                    android:text="@string/third_time" />

                <EditText
                    android:id="@+id/et_second_time"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/second_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_choose_repeat_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:hintText="@string/choose_repeat_problem">

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_56sdp"
                    android:text="@string/repeat_problem" />

                <CheckBox
                    android:id="@+id/checkbox_warranty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/inside_guaranty" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <EditText
                    android:id="@+id/et_warranty_start_date"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/guaranty_start_date"
                    android:id="@+id/txt_warranty_start"/>

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_choose_warranty_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14sdp"
                    app:hintText="@string/choose_guaranty_type">

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/guaranty_type"
                    android:id="@+id/txt_warranty"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner_choose_contract_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:hintText="@string/choose_agreement_type">

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_60sdp"
                    android:text="@string/agreement_type"
                    android:id="@+id/txt_contract_type"/>

                <CheckBox
                    android:id="@+id/checkbox_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_68sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/agreement" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <EditText
                    android:id="@+id/note"
                    android:layout_width="@dimen/_350sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/notes" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_create_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="#13AFB0"
                android:text="@string/btn_request"
                android:textColor="@color/gray" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>